syntax = "proto3";
package mythos.cosmosmod.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "cosmos/auth/v1beta1/auth.proto";

option go_package = "mythos/v1/x/cosmosmod/types";
option (gogoproto.goproto_getters_all) = false;

message AnyAccount {
    string type_url = 1;
    bytes value = 2;
}

message MsgSetAccount {
    AnyAccount account = 1;
}

message QueryAccountResponse {
    AnyAccount account = 1;
}

message QueryHasAccountResponse {
    bool value = 1;
}
